--- a/Skittles/.classpath
+++ b/Skittles/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="charts4j-1.3.jar"/>
+	<classpathentry kind="lib" path="/home/orestis/Work/Skittles/skittles/Skittles/src/charts4j-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
